# zk-creds

./: README.md  exp-request.txt
core/src/types/: mod.rs
host/: Cargo.toml
host/src/: main.rs
host/src/api/: mod.rs
host/src/api/routers/: mod.rs
host/src/api/routers/ai/: mod.rs
host/src/api/routers/prover/: js_handlers.rs  mod.rs  rhai_handlers.rs
host/src/api/routers/verifier/: mod.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
shared/: Cargo.toml
shared/src/types/: mod.rs
