[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
core = { path = "../core" }
risc0-zkvm = { version = "0.17.0" }
serde = "1.0"
serde_json = "1.0.106"
boa_engine = "0.17.0"
rhai = "1.16.0"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
bincode = "1.1.4"
base64ct = {version = "1.6.0", features = ["alloc"] }