[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "zk_prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.17.0", default-features = false }
shared = { path = "../../shared" }
rhai = { version = "1.16.1" }
boa_engine = "0.17.0"
serde_json = "1.0.106"
base64ct = {version = "1.6.0", features = ["alloc"] }
